# toygit

./: .nvim.lua  CMakeLists.txt  compile_commands.json
include/toygit/: commit.hpp  core.hpp  file.hpp  hash.hpp  lockfile.hpp  util.hpp  zlib.hpp
lib/: CMakeLists.txt  commit.cpp  core.cpp  file.cpp  lockfile.cpp  zlib.cpp
src/: CMakeLists.txt
src/toygit/: inflate.cpp  main.cpp
